<resources>
    <string name="app_name">NoteApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_my_notes">My Notes</string>
    <string name="search_your_notes">Search Your Notes</string>
    <string name="hint_title">Title</string>
    <string name="type_something">Type something...</string>
    <string name="hint_subtitle">Subtitle</string>
    <string name="request_sotrage_permission">This app needs access to your storage</string>
    <string name="date">Date</string>
    <string name="discard_dialog">Are your sure you want discard your changes ?</string>
    <string name="keep">Keep</string>
    <string name="discard">Discard</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
</resources>